--- a/style.css
+++ b/style.css
@@ -1,15 +1,3 @@
-html {
-    box-sizing: border-box;
-    background-color: var(--green);
-    margin: 0;
-    padding: 0;
-}
-
-ul {
-    list-style: none;
-    padding-left: 0px;
-}
-
 :root {
     --green: #eef5dc;
     --blue: #063477;
@@ -20,18 +8,51 @@ ul {
     --fontsans: Archia, Helvetica, Arial, sans-serif;
 }
 
+html {
+    box-sizing: border-box;
+    background-color: var(--green);
+    color: var(--blue);
+    margin: 0;
+    padding: 0;
+}
+
+ul {
+    list-style: none;
+    padding-left: 0px;
+}
+
 .body {
     height: 100vh;
+    width: 100%;
+    margin: 0;
+}
+
+.wrapper {
+    margin: 0 25px;
+}
+
+.header {
+    padding: 25px;
+}
+
+.title {
+    font-family: var(--fontserif);
+    font-size: 40px;
+}
+
+.text {
+    font-family: var(--fontsans);
+}
+
+.main {
+    display: flex;
+    flex-direction: column;
 }
 
 .table {
     border-spacing: 0;
     border-collapse: collapse;
-    margin: 40px auto 0px;
-}
-
-.mobile-clue {
-    margin: 5px auto 0px;
+    margin: 10px auto 0px;
 }
 
 .cell {
@@ -56,19 +77,14 @@ ul {
 }
 
 .letter {
-    height: 38px;
-    width: 38px;
+    height: 25px;
+    width: 25px;
     border: none;
     text-align: center;
     text-transform: uppercase;
-    font-size: 40px;
+    font-size: 25px;
     color: var(--blue);
     font-family: Archia, Helvetica, Arial, sans-serif;
-
-    @media all and (min-width: 768px) {
-        height: 38px;
-        width: 38px;
-    }
 }
 
 .btn-group {
@@ -117,4 +133,46 @@ ul {
 
 mark {
     background-color: var(--highlighter);
+}
+
+@media all and (min-width: 768px) {
+    .wrapper {
+        margin: 0 88px;
+    }
+    .header {
+        padding: 25px 50px;
+    }
+    .letter {
+        height: 38px;
+        width: 38px;
+        font-size: 35px;
+    }
+    .clues {
+        padding: 10px 50px;
+    }
+}
+@media all and (min-width: 1280px) {
+    .body {
+        margin: 0 auto;
+        width: 80%;
+    }
+    .header {
+        padding: 25px 0px 50px 80px;
+    }
+    .main {
+        display: flex;
+        flex-direction: row;
+    }
+    .form {
+        width: 80%;
+    }
+    .clues {
+        width: 20%;
+        order: -1;
+    }
+    .letter {
+        height: 48px;
+        width: 48px;
+        font-size: 40px;
+    }
 }
