--- a/style.css
+++ b/style.css
@@ -32,7 +32,7 @@ ul {
 }
 
 .header {
-    padding: 25px;
+    padding: 25px 25px 10px;
 }
 
 .title {
@@ -47,16 +47,16 @@ ul {
 .main {
     display: flex;
     flex-direction: column;
+    margin: auto;
 }
 
 .table {
     border-spacing: 0;
     border-collapse: collapse;
-    margin: 10px auto 0px;
+    margin: 10px auto;
 }
 
 .cell {
-    padding: 0;
     border: 1px solid var(--blue);
     background-color: var(--white);
 }
@@ -67,28 +67,30 @@ ul {
 
 .word-number {
     text-align: right;
-    padding-left: 4px;
-    font-size: 20px;
+    font-size: 7px;
     vertical-align: top;
     position: fixed;
     z-index: 1;
     color: var(--blue);
     font-family: var(--fontsans);
+    position: absolute;
 }
 
 .letter {
-    height: 25px;
-    width: 25px;
+    height: 23px;
+    width: 23px;
     border: none;
     text-align: center;
+    padding-top: 3px;
+
     text-transform: uppercase;
-    font-size: 25px;
+    font-size: 15px;
     color: var(--blue);
     font-family: Archia, Helvetica, Arial, sans-serif;
 }
 
 .btn-group {
-    margin: 40px auto;
+    margin: 40px auto 10px;
     display: flex;
     justify-content: space-evenly;
 }
@@ -117,7 +119,7 @@ ul {
 }
 
 .clues {
-    margin: 60px 50px;
+    margin: 30px 50px;
     align-content: center;
     color: var(--blue);
     font-family: var(--fontsans);
@@ -143,18 +145,21 @@ mark {
         padding: 25px 50px;
     }
     .letter {
-        height: 38px;
-        width: 38px;
+        height: 40px;
+        width: 40px;
         font-size: 35px;
     }
     .clues {
         padding: 10px 50px;
     }
+    .word-number {
+        font-size: 11px;
+    }
 }
 @media all and (min-width: 1280px) {
     .body {
         margin: 0 auto;
-        width: 80%;
+        width: 100%;
     }
     .header {
         padding: 25px 0px 50px 80px;
@@ -164,11 +169,12 @@ mark {
         flex-direction: row;
     }
     .form {
-        width: 80%;
+        flex-basis: 60%;
     }
     .clues {
-        width: 20%;
+        flex-basis: 40%;
         order: -1;
+        padding: 10px 0px 10px 80px;
     }
     .letter {
         height: 48px;
