--- a/style.css
+++ b/style.css
@@ -90,8 +90,6 @@ ul {
     width: 23px;
     border: none;
     text-align: center;
-    padding-top: 3px;
-
     text-transform: uppercase;
     font-size: 15px;
     color: var(--blue);
@@ -182,12 +180,13 @@ mark {
         flex-direction: row;
     }
     .form {
-        flex-basis: 60%;
+        flex-basis: 40%;
     }
     .clues {
-        flex-basis: 40%;
+        flex-basis: 60%;
         order: -1;
         padding: 10px 0px 10px 80px;
+        font-size: 20px;
     }
     .letter {
         height: 48px;
