--- a/style.css
+++ b/style.css
@@ -14,11 +14,12 @@ html {
     color: var(--blue);
     margin: 0;
     padding: 0;
+    font-size: 16px;
 }
 
 ul {
     list-style: none;
-    padding-left: 0px;
+    padding-left: 0;
 }
 
 .body {
@@ -28,16 +29,16 @@ ul {
 }
 
 .wrapper {
-    margin: 0 25px;
+    margin: 0 1.5rem;
 }
 
 .header {
-    padding: 25px 25px 10px;
+    padding: 1.5rem 1.5rem 0.5rem;
 }
 
 .title {
     font-family: var(--fontserif);
-    font-size: 40px;
+    font-size: 2.5rem;
 }
 
 .text {
@@ -54,15 +55,15 @@ ul {
     position: relative;
     font-family: var(--fontsans);
     text-align: center;
-    font-size: 18px;
-    margin-right: 5px;
+    font-size: 1.1rem;
+    margin-right: 0.3rem;
     display: block;
 }
 
 .table {
     border-spacing: 0;
     border-collapse: collapse;
-    margin: 10px auto;
+    margin: 0.5rem auto;
 }
 
 .cell {
@@ -76,7 +77,7 @@ ul {
 
 .word-number {
     text-align: right;
-    font-size: 7px;
+    font-size: 0.4rem;
     vertical-align: top;
     position: fixed;
     z-index: 1;
@@ -86,18 +87,18 @@ ul {
 }
 
 .letter {
-    height: 23px;
-    width: 23px;
+    height: 1.4rem;
+    width: 1.4rem;
     border: none;
     text-align: center;
     text-transform: uppercase;
-    font-size: 15px;
+    font-size: 1rem;
     color: var(--blue);
     font-family: Archia, Helvetica, Arial, sans-serif;
 }
 
 .btn-group {
-    margin: 40px auto 10px;
+    margin: 2.5rem auto 0.5rem;
     display: flex;
     justify-content: space-evenly;
 }
@@ -107,8 +108,8 @@ ul {
     color: var(--blue);
     font-family: var(--fontsans);
     border: none;
-    border-radius: 5px;
-    box-shadow: 5px 5px 0px var(--blue);
+    border-radius: 0.3rem;
+    box-shadow: 0.3rem 0.3rem 0 var(--blue);
     padding: 8px;
     cursor: pointer;
 }
@@ -127,7 +128,7 @@ ul {
 }
 
 .clues {
-    margin: 30px 50px;
+    margin: 30px 3rem;
     align-content: center;
     max-height: 800px;
     overflow-y: scroll;
@@ -150,24 +151,24 @@ mark {
 
 @media all and (min-width: 768px) {
     .wrapper {
-        margin: 0 88px;
+        margin: 0 5.5rem;
     }
     .header {
-        padding: 25px 50px;
+        padding: 1.5rem 3rem;
     }
     .letter {
-        height: 40px;
-        width: 40px;
-        font-size: 35px;
+        height: 2.5rem;
+        width: 2.5rem;
+        font-size: 2rem;
     }
     .clues {
-        padding: 10px 50px;
+        padding: 0.5rem 3rem;
     }
     .word-number {
-        font-size: 11px;
+        font-size: 0.6rem;
     }
     .timer {
-        font-size: 25px;
+        font-size: 1.5rem;
     }
 }
 @media all and (min-width: 1280px) {
@@ -176,7 +177,7 @@ mark {
         width: 100%;
     }
     .header {
-        padding: 25px 0px 50px 80px;
+        padding: 1.5rem 0 3rem 5rem;
     }
     .main {
         display: flex;
@@ -188,12 +189,12 @@ mark {
     .clues {
         flex-basis: 60%;
         order: -1;
-        padding: 10px 0px 10px 80px;
+        padding: 0.5rem 0 0.5rem 5rem;
         font-size: 20px;
     }
     .letter {
-        height: 48px;
-        width: 48px;
-        font-size: 40px;
+        height: 3rem;
+        width: 3rem;
+        font-size: 2rem;
     }
 }
