--- a/style.css
+++ b/style.css
@@ -90,6 +90,7 @@ ul {
     height: 1.4rem;
     width: 1.4rem;
     border: none;
+    box-shadow: none;
     text-align: center;
     text-transform: uppercase;
     font-size: 1rem;
