--- a/style.css
+++ b/style.css
@@ -114,17 +114,19 @@ ul {
 }
 
 .timer {
-    position: relative;
-    text-align: center;
     font-size: 1.1rem;
-    margin-right: 0.3rem;
-    display: block;
+    margin-bottom: 0.5rem;
+}
+
+.form-panel {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 .table {
     border-spacing: 0;
     border-collapse: collapse;
-    margin: 0.5rem auto;
 }
 
 .cell {
@@ -146,8 +148,8 @@ ul {
 
 .letter {
     background: none;
-    height: 1.8rem;
-    width: 1.8rem;
+    height: 1.5rem;
+    width: 1.5rem;
     border: none;
     box-shadow: none;
     text-align: center;
@@ -172,6 +174,7 @@ ul {
     margin: 2.5rem auto 0.5rem;
     display: flex;
     justify-content: space-evenly;
+    font-size: 0.5rem;
 }
 
 .btn {
