--- a/style.css
+++ b/style.css
@@ -118,7 +118,8 @@ ul {
     margin-bottom: 0.5rem;
 }
 
-.form-panel {
+.form-panel,
+.form {
     display: flex;
     flex-direction: column;
     align-items: center;
