--- a/style.css
+++ b/style.css
@@ -24,6 +24,15 @@ ul {
     padding-left: 0;
 }
 
+input,
+table,
+td,
+tbody,
+tr {
+    margin: 0;
+    padding: 0;
+}
+
 .body {
     height: 100vh;
     width: 100%;
@@ -66,7 +75,7 @@ ul {
     text-align: center;
     z-index: 2;
     padding: 0 1.5rem 1.5rem;
-    width: 50vh;
+    width: 45vh;
 }
 
 .dialog > h1 {
@@ -115,19 +124,20 @@ ul {
 
 .timer {
     font-size: 1.1rem;
-    margin-bottom: 0.5rem;
+    display: block;
+    margin: 0 auto;
 }
 
-.form-panel,
 .form {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-content: center;
 }
 
 .table {
     border-spacing: 0;
     border-collapse: collapse;
+    margin: 0.5rem auto 0;
 }
 
 .cell {
@@ -149,14 +159,15 @@ ul {
 
 .letter {
     background: none;
-    height: 1.5rem;
-    width: 1.5rem;
+    height: 1.7rem;
+    width: 1.7rem;
     border: none;
     box-shadow: none;
     text-align: center;
     text-transform: uppercase;
     font-size: 1.4rem;
     color: var(--blue);
+    outline: none;
 }
 
 .highlight {
@@ -164,18 +175,20 @@ ul {
 }
 
 .clue-box {
-    font-size: 1.1rem;
-    height: 2rem;
+    margin: 1.2rem auto 2rem;
+    font-size: 1rem;
+    height: 1.5rem;
     line-height: 1.2rem;
     padding: 0 1rem;
     text-align: center;
 }
 
 .btn-group {
-    margin: 2.5rem auto 0.5rem;
+    margin-top: 2.2rem;
+    margin-bottom: 0.5rem;
+    font-size: 0.5rem;
     display: flex;
     justify-content: space-evenly;
-    font-size: 0.5rem;
 }
 
 .btn {
@@ -211,7 +224,7 @@ ul {
     }
 
     .wrapper {
-        margin: 0 2.5rem;
+        margin: 0 5rem;
     }
 }
 @media all and (min-width: 1200px) {
@@ -220,7 +233,7 @@ ul {
     }
 
     .header,
-    .form-panel {
+    .form {
         margin-left: 40%;
     }
 
@@ -232,5 +245,10 @@ ul {
         margin: 0;
         width: 35%;
         height: 100vh;
+    }
+
+    .letter {
+        height: 2rem;
+        width: 2rem;
     }
 }
