--- a/style.css
+++ b/style.css
@@ -153,7 +153,7 @@ tr {
     text-align: right;
     font-size: 0.4rem;
     vertical-align: top;
-    color: var(--fadeblue);
+    color: var(--blue);
     position: absolute;
     padding: 0.1rem 0 0 0.1rem;
 }
